# careerrag

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
src/careerrag/: __init__.py  __main__.py  config.py  server.py
src/careerrag/frontend/static/css/: chat.css
src/careerrag/frontend/static/js/: initialize-chat.js
src/careerrag/frontend/templates/: chat.html
src/careerrag/rag/: __init__.py  chunker.py  constant.py  fusion.py  generator.py  indexer.py  keyword.py  loader.py  observer.py  pipeline.py  prompt.py  reranker.py  retriever.py  selector.py  tracing.py  util.py  vector.py
src/careerrag/server/: __init__.py  app.py
src/careerrag/static/css/: chat.css
src/careerrag/static/js/: chat.js  initialize-chat.js
src/careerrag/templates/: chat.html
tests/: __init__.py  test_pipeline.py
tests/fixtures/: sample-resume.docx
