[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
authors = [{ name = "Arup Kumar Maiti", email = "arup@arupkumarmaiti.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = ["fastapi>=0.115", "jinja2>=3.1", "uvicorn[standard]>=0.34"]
description = "RAG-powered chat interface for career profiles"
dynamic = ["version"]
license = "MIT"
name = "careerrag"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/arup-kumar-maiti/careerrag"
Repository = "https://github.com/arup-kumar-maiti/careerrag"

[tool.hatch.build.targets.wheel]
packages = ["src/careerrag"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>\\d+\\.\\d+\\.\\d+)"
