[build-system]
build-backend = "hatchling.build"
requires = ["hatch-vcs", "hatchling"]

[project]
authors = [{ name = "Arup Kumar Maiti", email = "arup@arupkumarmaiti.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
  "anthropic>=0.97",
  "chromadb>=1.5",
  "docling>=2.92",
  "fastapi>=0.136",
  "httpx>=0.28",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "rank-bm25>=0.2",
  "sentence-transformers>=5.4",
  "typer>=0.21",
  "uvicorn[standard]>=0.46",
]
description = "RAG-powered chat interface for career profiles"
dynamic = ["version"]
license = "MIT"
name = "careerrag"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=9.0"]

[project.urls]
Homepage = "https://github.com/arup-kumar-maiti/careerrag"
Repository = "https://github.com/arup-kumar-maiti/careerrag"

[tool.hatch.build.targets.wheel]
packages = ["src/careerrag"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>\\d+\\.\\d+\\.\\d+)"
